fix pace position on mobile resolution

--- a/assets/css/components/_pace.scss
+++ b/assets/css/components/_pace.scss
@@ -56,7 +56,7 @@
 @media (max-width: 767px) {
 	.pace .pace-activity {
 		top: 15px;
-		right: 15px;
+		right: 90px;
 		width: 14px;
 		height: 14px
 	}
